# Conductor

./: 2  CHANGELOG.md  LICENSE  README.md  conductor.cabal  conductor_hypr.sh  intro_ideas.typ  preliminary_proposal.typ  test.con
app/: Main.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
src/: Conductor.hs  Main.hs  MyLib.hs  Parser.hs
src-xmonad/Conductor/: XMonad.hs
src/Conductor/: Parser.hs  XMonad.hs
test/: Main.hs
