cabal-version:      3.0
name:               conductor
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             Harrison DiAmbrosio, Parker Lavering, Po-Yeh Chen
maintainer:         hdiambrosio@gmail.com
category:           Graphics
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Conductor
    other-modules:    Parser
    build-depends:    base ^>=4.18.3.0,
                      containers,
                      aeson,
                      mtl,
                      unordered-containers,
                      vector,
                      bytestring,
                      text,
                      megaparsec
    hs-source-dirs:   src
    default-language: Haskell2010

executable conductor
    import:           warnings
    default-language: Haskell2010
    main-is:          Main.hs
    hs-source-dirs:   app
    build-depends:    base ^>=4.18.3.0,
                      text,
                      conductor

test-suite conductor-test
    import:           warnings
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.18.3.0,
        conductor
