cabal-version:      3.0
name:               conductor
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             Harrison DiAmbrosio, Parker Lavering, Po-Yeh Chen
maintainer:         hdiambrosio@gmail.com
category:           Graphics
build-type:         Simple

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Conductor, Conductor.Parser
    other-modules:
    build-depends:    base >=4.18,
                      containers,
                      aeson,
                      mtl,
                      unordered-containers,
                      vector,
                      bytestring,
                      text,
                      transformers,
                      megaparsec
    hs-source-dirs:   src
    default-language: Haskell2010

-- XMonad integration lives in src/Conductor/XMonad.hs.
-- To wire it in, add a library stanza on a Linux box that has xmonad:
--
--   library conductor-xmonad
--       exposed-modules:  Conductor.XMonad
--       build-depends:    base >=4.18, conductor, aeson, bytestring,
--                         containers, X11, xmonad
--       hs-source-dirs:   src
--       default-language: Haskell2010

executable conductor
    import:           warnings
    default-language: Haskell2010
    main-is:          Main.hs
    hs-source-dirs:   app
    build-depends:    base >=4.18,
                      aeson,
                      bytestring,
                      containers,
                      megaparsec,
                      text,
                      conductor

test-suite conductor-test
    import:           warnings
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base >=4.18,
        containers,
        conductor,
        tasty,
        tasty-hunit,
        text,
        transformers,
        megaparsec,
        HUnit
